--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,7 @@
     --preta: #141414;
 }
 
+/* Base */
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +13,7 @@
 body {
     background: var(--preta);
     font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
 
 header .container {
@@ -35,4 +37,25 @@ header nav a {
 }
 header nav a:hover{
     color:#fff;
+}
+
+/* Filme principal */
+.filme-principal{
+    font-size: 16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/TheItCrowdCapa.jpg');
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 40px;
+}
+.titulo {
+    font-size: 40px;
+    margin-bottom: 20px;
 }
