--- a/style/main.css
+++ b/style/main.css
@@ -105,3 +105,11 @@ button i {
   padding: 5px;
   margin: 20px;
 }
+
+.container {
+    margin-left: 20px
+}
+
+.filme-principal .container {
+    width: 70%;
+}
