--- a/style/main.css
+++ b/style/main.css
@@ -113,3 +113,9 @@ button i {
 .filme-principal .container {
     width: 70%;
 }
+
+.box-filme{
+  height: 100%;
+  width: 100%;
+  display: block;
+}
